Created sign up role layout

--- a/app/src/main/res/layout/fragment_forget_password.xml
+++ b/app/src/main/res/layout/fragment_forget_password.xml
@@ -12,13 +12,16 @@
         android:layout_height="match_parent"
         tools:context=".ForgetPasswordFragment">
 
-        <ImageView
-            android:id="@+id/img_back_arrow"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="24dp"
-            android:src="@drawable/arrow_back_24"
+        <ImageButton
+            android:id="@+id/button_back_forgot"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="@dimen/spacing_normal"
+            android:layout_marginTop="@dimen/spacing_normal"
+            android:background="@drawable/image_button_round_corner"
+            android:elevation="8dp"
+            android:padding="10dp"
+            android:src="@drawable/back_arrow_ic"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -32,9 +35,9 @@
             android:textColor="#000000"
             android:textSize="@dimen/reset_password_font_size_large"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@+id/img_back_arrow"
-            app:layout_constraintStart_toEndOf="@+id/img_back_arrow"
-            app:layout_constraintTop_toTopOf="@+id/img_back_arrow" />
+            app:layout_constraintBottom_toBottomOf="@+id/button_back_forgot"
+            app:layout_constraintStart_toEndOf="@+id/button_back_forgot"
+            app:layout_constraintTop_toTopOf="@+id/button_back_forgot" />
 
         <ImageView
             android:id="@+id/img_reset_password"
