Done Creating splash screen and onBoarding screens wth na graph set

--- a/app/src/main/res/drawable/radio_button_style.xml
+++ b/app/src/main/res/drawable/radio_button_style.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- android:parent="Theme.AppCompat.Light" after name attribute-->
 <style android:name="RadioButton"
-    android:parent="Theme.AppCompat.Light"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:name="colorAccent">@color/main_color</item>
     <item android:name="android:textColorSecondary">@color/black</item>
