added shifaa logo for splash and sign in screens

--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -29,10 +29,10 @@
 
         <ImageView
             android:id="@+id/iv_logo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/spacing_large"
-            android:src="@drawable/logo_placeholder"
+            android:layout_width="121dp"
+            android:layout_height="113dp"
+            android:layout_marginTop="16dp"
+            android:src="@drawable/shifaa_logo"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/guideline_upper" />
