--- a/app/src/main/res/layout/fragment_sign_up_patient.xml
+++ b/app/src/main/res/layout/fragment_sign_up_patient.xml
@@ -428,7 +428,7 @@
             android:layout_marginTop="24dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="32dp"
-            android:text="@string/confirm_signup_patient"
+            android:text="@string/register"
             android:textAllCaps="false"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
