--- a/app/src/main/res/layout/dropdown_item.xml
+++ b/app/src/main/res/layout/dropdown_item.xml
@@ -8,5 +8,9 @@
     android:fontFamily="@font/poppins_medium"
     android:padding="14dp"
     android:text="TextView"
+    android:background="@drawable/text_box"
+    android:gravity="center"
+    android:elevation="6dp"
+    android:drawablePadding="4dp"
     android:textColor="@color/black"
     android:textSize="@dimen/sign_in_text_size_normal" />
