--- a/app/src/main/res/layout/dropdown_item.xml
+++ b/app/src/main/res/layout/dropdown_item.xml
@@ -6,11 +6,13 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:fontFamily="@font/poppins_medium"
-    android:padding="14dp"
+
+    android:paddingTop="14dp"
+    android:paddingBottom="14dp"
     android:text="TextView"
     android:background="@drawable/text_box"
     android:gravity="center"
     android:elevation="6dp"
-    android:drawablePadding="4dp"
+    android:drawablePadding="2dp"
     android:textColor="@color/black"
-    android:textSize="@dimen/sign_in_text_size_normal" />
+    android:textSize="@dimen/sign_in_text_size_small" />
