--- a/app/src/main/res/layout/fragment_sign_up_patient.xml
+++ b/app/src/main/res/layout/fragment_sign_up_patient.xml
@@ -180,6 +180,7 @@
                     android:layout_height="wrap_content"
                     app:boxStrokeColor="@color/main_color"
                     app:hintEnabled="false"
+                    app:layout_constraintBottom_toBottomOf="@+id/til_day_signup_patient"
                     app:layout_constraintEnd_toStartOf="@+id/textInputLayout4"
                     app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toEndOf="@+id/til_day_signup_patient"
@@ -205,6 +206,7 @@
                     android:layout_marginEnd="8dp"
                     app:boxStrokeColor="@color/main_color"
                     app:hintEnabled="false"
+                    app:layout_constraintBottom_toBottomOf="@+id/textInputLayout3"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toEndOf="@+id/textInputLayout3"
