Created doctor activity, refactored file structure, navigate condition in login screen and created splash screen animation

--- a/app/src/main/res/layout/fragment_forget_password.xml
+++ b/app/src/main/res/layout/fragment_forget_password.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ForgetPasswordFragment"
+    tools:context=".ui.auth.forget_password.ForgetPasswordFragment"
     android:fillViewport="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ForgetPasswordFragment">
+        tools:context=".ui.auth.forget_password.ForgetPasswordFragment">
 
         <ImageButton
             android:id="@+id/button_back_forgot"
