--- a/app/src/main/res/layout/fragment_reset_password.xml
+++ b/app/src/main/res/layout/fragment_reset_password.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
-    tools:context=".ResetPasswordFragment">
+    tools:context=".ui.auth.forget_password.ResetPasswordFragment">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
