--- a/app/src/main/res/layout/fragment_sign_up_role.xml
+++ b/app/src/main/res/layout/fragment_sign_up_role.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SignUpRoleFragment"
+    tools:context=".ui.auth.register.SignUpRoleFragment"
     android:fillViewport="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
