--- a/app/src/main/res/layout/fragment_on_boarding_first.xml
+++ b/app/src/main/res/layout/fragment_on_boarding_first.xml
@@ -8,9 +8,11 @@
     tools:context=".ui.auth.onboarding.screens.OnBoardingFirstFragment">
 
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.constraintlayout.motion.widget.MotionLayout
+        android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:layoutDescription="@xml/fragment_on_boarding_first_xml_constraintlayout3_scene">
 
         <ImageView
             android:id="@+id/iv_onBoarding_first"
@@ -71,5 +73,5 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/iv_onBoarding_first" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.motion.widget.MotionLayout>
 </ScrollView>
