--- a/app/src/main/res/layout/fragment_on_boarding_third.xml
+++ b/app/src/main/res/layout/fragment_on_boarding_third.xml
@@ -8,9 +8,11 @@
     tools:context=".ui.auth.onboarding.screens.OnBoardingThirdFragment">
 
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.constraintlayout.motion.widget.MotionLayout
+        android:id="@+id/constraintLayout3"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:layoutDescription="@xml/fragment_on_boarding_third_xml_constraintlayout3_scene">
 
         <ImageView
             android:id="@+id/iv_onBoarding_third"
@@ -57,5 +59,5 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/iv_onBoarding_third" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.motion.widget.MotionLayout>
 </ScrollView>
