Created reschedule list item

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,7 @@
     <color name="gray">#828282</color>
     <!-- gray color -->
 
+    <!-- Ternary color -->
+    <color name="ternary_color">#E3F2FD</color>
+    <!-- Ternary color -->
 </resources>
