--- a/app/src/main/res/layout/fragment_doctor_schedule.xml
+++ b/app/src/main/res/layout/fragment_doctor_schedule.xml
@@ -12,18 +12,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/textView13"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Schedule"
-            android:textSize="34sp"
-            android:textStyle="bold"
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.5" />
+            tools:listitem="@layout/reschedule_list_item"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
