--- a/app/src/main/res/layout/reschedule_list_item.xml
+++ b/app/src/main/res/layout/reschedule_list_item.xml
@@ -4,7 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="15dp"
+    android:layout_marginStart="16dp"
+    android:layout_marginTop="8dp"
+    android:layout_marginEnd="16dp"
+    android:layout_marginBottom="8dp"
     app:cardCornerRadius="15dp"
     app:cardElevation="8dp">
 
